2006-01-28  Hans Breuer  <hans@breuer.org>

	* po/checktrans.py : make it work with recent pyxml (unknown url type)
	* po/AADL.sheet.in : remove duplicated _description
	=> translation report works again

	* app/display.c : revert back to "_Discard Changes" to avoid
	accelerator clash. Also gtk_button_new_with_mnemonic() to
	'expand' the accelerator.

	* lib/dia_svg.c(dia_svg_style_init) : need to initialize
	linecap, linejoin, linestyle to avoid invalid settings.
	(Nguyen Thai Ngoc Duy, bug #328945)
	* lib/diagdkrenderer.c : add a place fro breakpoint to 
	detect invalid mode

	* lib/diarenderer.c(setfont) : if we get passed in the
	same font it must be ref'd before unref.

	* lib/text.c(set_string) : don't eat the trailing new-line
	Fixes bug #165092
	
	* app/app_procs.c app/display.c app/filedlg.c 
	attempt to provide more HIG compliant dialogs. Patch from
	Nguyen Thai Ngoc Duy, part of bug #138183
	
	* app/recent_files.c(recent_file_history_clear_menu) : instead of 
	messing with GtkMenuShell::children and gtk_widget_destroy() just 
	use gtk_container_remove. Avoids memory corruption causing the
	most 'random' crashes recently.
	
	* objects/UML/message.c : can't use PROP_STD_TEXT_COLOUR_OPTIONAL 
	cause it has PROP_FLAG_DONT_SAVE. It is designed to fill the 
	TextAttributes - not some subset. Fixes bug #327701
	* objects/UML/implements.c objects/UML/generalization.c
	  objects/UML/constraint.c objects/UML/object.c
	  objects/UML/large_package.c objects/UML/realizes.c : same here.
	* objects/UML/dependency.c : same here. Also draw the "Name" with the
	given color, not only the Stereotype.
	* objects/UML/class.c : same here. But we also need to restore 
	explicit restore "text_color" for the load case.
	
2006-01-27  Hans Breuer  <hans@breuer.org>

	* configure.in : error out if GLib/GTK+ version is lower than required

	* app/filedlg.c lib/widgets.c : more default responses. Patch 
	from Nguyen Thai Ngoc Duy, part of bug #138183
	